--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="57" style="font-family: Aldrich, sans-serif;">
@@ -64,27 +64,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-3 text-center">
-                    <div class="mx-auto service-box mt-5"><i class="fa fa-ship fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-ship fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in"></i>
                         <h3 class="mb-3">Importacion</h3>
                         <p class="text-muted mb-0">Importamos toda clase de Pescados y Mariscos.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
-                    <div class="mx-auto service-box mt-5"><i class="fa fa-bus fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="200" data-aos-once="true"></i>
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-bus fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in"></i>
                         <h3 class="mb-3">Distribucion</h3>
                         <p class="text-muted mb-0">Distribuimos la mercancia a cualquier parte del Pais.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
-                    <div class="mx-auto service-box mt-5"><i class="fa fa-newspaper-o fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-delay="400" data-aos-once="true"></i>
-                        <h3 class="mb-3">Up to Date</h3>
-                        <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-truck fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in"></i>
+                        <h3 class="mb-3">Comercializacion</h3>
+                        <p class="text-muted mb-0">Comercializamos toda clase de Pescados y Mariscos.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 text-center">
-                    <div class="mx-auto service-box mt-5"><i class="fa fa-heart fa-4x text-primary mb-3 sr-icons" data-aos="fade" data-aos-duration="200" data-aos-delay="600" data-aos-once="true"></i>
-                        <h3 class="mb-3">Made with Love</h3>
-                        <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+                    <div class="mx-auto service-box mt-5"><i class="fa fa-cc-visa fa-4x text-primary mb-3 sr-icons" data-aos="fade" data-aos-delay="600"></i>
+                        <h3 class="mb-3">Pagos</h3>
+                        <p class="text-muted mb-0">Contamos con variedad y facilidad de formas de pago.</p>
                     </div>
                 </div>
             </div>
@@ -93,51 +93,53 @@
     <section id="portfolio" class="p-0">
         <div class="container-fluid p-0">
             <div class="row g-0 popup-gallery">
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/1.jpg"><img class="img-fluid" src="assets/img/thumbnails/1.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/Calamar.jpg"><img class="img-fluid" src="assets/img/thumbnails/Calamar.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Mariscos</span></div>
+                                <div class="project-name"><span>Anillos de Calamar</span></div>
                             </div>
                         </div>
                     </a></div>
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/2.jpg"><img class="img-fluid" src="assets/img/thumbnails/2.jpg">
+                <div class="col-sm-6 col-lg-4">
+                    <a class="portfolio-box" href="assets/img/fullsize/Langostinos.jpg">
+                        <img class="img-fluid" src="assets/img/thumbnails/Langostinos.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Mariscos</span></div>
+                                <div class="project-name text-capitalize"><span>Langostinos</span></div>
                             </div>
                         </div>
                     </a></div>
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/3.jpg"><img class="img-fluid" src="assets/img/thumbnails/3.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/Pargo_rojo.jpg"><img class="img-fluid" src="assets/img/thumbnails/Pargo_rojo.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Pescados</span></div>
+                                <div class="project-name"><span>Pargo Rojo</span></div>
                             </div>
                         </div>
                     </a></div>
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/4.jpg"><img class="img-fluid" src="assets/img/thumbnails/4.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/Cmaron.jpg"><img class="img-fluid" src="assets/img/thumbnails/Cmaron.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Mariscos</span></div>
+                                <div class="project-name"><span>Camaron</span></div>
                             </div>
                         </div>
                     </a></div>
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/5.jpg"><img class="img-fluid" src="assets/img/thumbnails/5.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/Corvina.jpg"><img class="img-fluid" src="assets/img/thumbnails/Corvina.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Pescado</span></div>
+                                <div class="project-name"><span>Corvina</span></div>
                             </div>
                         </div>
                     </a></div>
-                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/6.jpg"><img class="img-fluid" src="assets/img/thumbnails/6.jpg">
+                <div class="col-sm-6 col-lg-4"><a class="portfolio-box" href="assets/img/fullsize/manteco.jpg"><img class="img-fluid" src="assets/img/thumbnails/manteco.jpg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded"><span>Category</span></div>
-                                <div class="project-name"><span>Project Name</span></div>
+                                <div class="project-category text-faded"><span>Pescado</span></div>
+                                <div class="project-name"><span>Manteco</span></div>
                             </div>
                         </div>
                     </a></div>
@@ -146,24 +148,25 @@
     </section>
     <section class="text-white bg-dark">
         <div class="container text-center">
-            <h2 class="mb-4">Lorem Ipsum!</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">Download Now!</a>
+            <h2 class="mb-4">...</h2><a class="btn btn-light btn-xl sr-button" role="button" data-aos="zoom-in" data-aos-duration="400" data-aos-once="true" href="#">informacion</a>
         </div>
     </section>
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-center mx-auto">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading text-capitalize">mas informacion</h2>
                     <hr class="my-4">
-                    <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p class="mb-5">Comunícate con nosotros, te brindaremos asesoría e información de lo que tu necesites.<br>Tenemos personal especializado para brindarte la mejor experiencia</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 text-center ms-auto"><i class="fa fa-phone fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true"></i>
-                    <p>123-456-6789</p>
+                    <p>302-819-5991</p>
+                    <p>315-498-1316</p>
                 </div>
                 <div class="col-lg-4 text-center me-auto"><i class="fa fa-envelope-o fa-3x mb-3 sr-contact" data-aos="zoom-in" data-aos-duration="300" data-aos-delay="300" data-aos-once="true"></i>
-                    <p><a href="mailto:your-email@your-domain.com">email@example.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">informacion@dosmares.com</a></p>
                 </div>
             </div>
         </div>
